fix: translate all remaining hardcoded English text across application
- Translated table headers, status labels, and UI text in TimeTracking.jsx
- Translated pay breakdown, vacation accrual labels in Payroll.jsx
- Translated calendar legend and leave type labels in LeaveManagement.jsx
- Translated compliance and dashboard labels
- Added missing translation keys to en.json, es.json, and fr.json
- Ensured comprehensive i18n coverage across all pages

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -32,8 +32,10 @@
     "pendingLeave": "Pending Leave Requests",
     "recentActivity": "Recent Activity",
     "noActivity": "No recent activity",
+    "avgHoursWeek": "Avg Hours/Week",
     "loadingInsights": "Loading your HR insights...",
     "happeningInOrg": "Here's what's happening in your organization",
+    "workforceSnapshot": "Here's your workforce snapshot for today.",
     "timeRange": "Time Range",
     "thisWeek": "This Week",
     "thisMonth": "This Month",
@@ -70,7 +72,8 @@
     "uploadTimecards": "Upload Timecards",
     "uploadBonuses": "Upload Bonuses",
     "leaveRequests": "Leave & Requests",
-    "payroll": "Payroll"
+    "payroll": "Payroll",
+    "unknown": "Unknown date"
   },
   "employees": {
     "title": "Employees",
@@ -137,10 +140,146 @@
     "leaveCalendar": "Leave Calendar",
     "leaveRequests": "Leave Requests",
     "leaveBalances": "Leave Balances",
-    "analytics": "Analytics"
+    "analytics": "Analytics",
+    "recordLeaveEntry": "Record Leave Entry",
+    "hrRecordsDescription": "HR records employee leave communicated via email, phone, or in-person",
+    "employee": "Employee",
+    "required": "*",
+    "selectLeaveType": "Select leave type...",
+    "availableDays": "Available Days:",
+    "daysLabel": "days",
+    "requestMethod": "Request Method",
+    "howWasRequested": "How was it requested?",
+    "email": "📧 Email",
+    "phone": "📞 Phone",
+    "inPerson": "🤝 In-Person",
+    "slack": "💬 Slack",
+    "written": "📝 Written",
+    "other": "❓ Other",
+    "pendingReview": "⏳ Pending Review",
+    "approvedStatus": "✅ Approved",
+    "rejectedStatus": "❌ Rejected",
+    "cancelled": "🚫 Cancelled",
+    "reasonLabel": "Reason",
+    "reasonPlaceholder": "Optional: Why is the employee taking leave?",
+    "hrNotes": "HR Notes (Internal)",
+    "hrNotesPlaceholder": "Optional: Internal notes for HR records...",
+    "saveAs": "Save as",
+    "saveAndApprove": "Save & Approve",
+    "pendingRequests": "Pending Requests",
+    "noPendingRequests": "No pending leave requests found",
+    "allRequestsHistory": "All Requests History",
+    "noRequestsFound": "No leave requests found",
+    "showing": "Showing",
+    "of": "of",
+    "requests": "requests",
+    "page": "Page",
+    "previous": "Previous",
+    "next": "Next",
+    "totalDays": "Total Days:",
+    "typeToSearch": "Type to search employee...",
+    "noDept": "No Dept",
+    "balances": {
+      "totalAvailable": "Total Available",
+      "daysRemaining": "days remaining",
+      "thisYearUsed": "This Year Used",
+      "daysTaken": "days taken",
+      "accrualRate": "Accrual Rate",
+      "daysPerMonth": "days per month",
+      "expiringSoon": "Expiring Soon",
+      "daysInThirtyDays": "days in 30 days",
+      "leaveTypeBreakdown": "Leave Type Breakdown",
+      "available": "Available",
+      "used": "Used",
+      "noLeaveDataAvailable": "No Leave Data Available",
+      "leaveBalancesWillAppear": "Leave balances will appear here once employees start using the system.",
+      "vacation": "Vacation",
+      "vacationDays": "20 days/year",
+      "sickLeave": "Sick Leave",
+      "sickLeaveDays": "10 days/year",
+      "personal": "Personal",
+      "personalDays": "5 days/year",
+      "accrualRateLabel": "days/month • Expires",
+      "expiresNever": "Never",
+      "availableLabel": "available",
+      "usedLabel": "Used:",
+      "availableLabel2": "Available:",
+      "percentUsed": "% used",
+      "percentAvailable": "% available"
+    },
+    "hrManagement": {
+      "title": "HR Management Actions",
+      "reviewRequests": "Review Requests",
+      "reviewRequestsDesc": "Approve or reject leave requests",
+      "viewAnalytics": "View Analytics",
+      "viewAnalyticsDesc": "Check leave trends and reports",
+      "managePolicies": "Manage Policies",
+      "managePoliciesDesc": "Configure leave policies and rules"
+    },
+    "calendar": {
+      "title": "Leave Calendar",
+      "sun": "Sun",
+      "mon": "Mon",
+      "tue": "Tue",
+      "wed": "Wed",
+      "thu": "Thu",
+      "fri": "Fri",
+      "sat": "Sat",
+      "selectDate": "Select a date",
+      "clickToSee": "Click on a calendar day to see who's on leave",
+      "noOneOnLeave": "No one is on leave this day",
+      "more": "more",
+      "legend": {
+        "vacation": "Vacation",
+        "sickLeave": "Sick Leave",
+        "personal": "Personal",
+        "parental": "Parental",
+        "other": "Other"
+      }
+    },
+    "analyticsTab": {
+      "totalRequests": "Total Requests",
+      "pendingCount": "Pending",
+      "approvedCount": "Approved",
+      "upcomingCount": "Upcoming"
+    },
+    "policyManagement": {
+      "title": "Leave Policy Management",
+      "policyOverview": "Policy Overview",
+      "vacationPolicy": "Vacation Policy",
+      "sickLeavePolicy": "Sick Leave Policy",
+      "personalLeavePolicy": "Personal Leave",
+      "annualAllocation": "Annual Allocation:",
+      "accrualRate": "Accrual Rate:",
+      "carryOver": "Carry Over:",
+      "daysMax": "days max",
+      "daysPerMonth": "days/month",
+      "unlimited": "Unlimited",
+      "noCarryOver": "No carry over",
+      "policyConfiguration": "Policy Configuration",
+      "accrualFrequency": "Accrual Frequency",
+      "monthly": "Monthly",
+      "biweekly": "Bi-weekly",
+      "quarterly": "Quarterly",
+      "fiscalYearStart": "Fiscal Year Start",
+      "january1": "January 1st",
+      "april1": "April 1st",
+      "july1": "July 1st",
+      "october1": "October 1st",
+      "minimumNoticePeriod": "Minimum Notice Period",
+      "24hours": "24 hours",
+      "48hours": "48 hours",
+      "1week": "1 week",
+      "2weeks": "2 weeks",
+      "maximumConsecutiveDays": "Maximum Consecutive Days",
+      "saveChanges": "Save Changes"
+    },
+    "errorCreating": "Error creating leave entry"
   },
   "payroll": {
-    "title": "Payroll",
+    "title": "Payroll Management",
+    "description": "Employee payroll by pay period",
+    "loading": "Loading payroll data...",
     "overview": "Overview",
     "payPeriod": "Pay Period",
     "payDate": "Pay Date",
@@ -151,9 +290,27 @@
     "hours": "Hours",
     "regularHours": "Regular Hours",
     "overtimeHours": "Overtime Hours",
+    "totalHours": "Total Hours",
     "hourlyRate": "Hourly Rate",
     "processPayroll": "Process Payroll",
-    "viewDetails": "View Details"
+    "viewDetails": "View Details",
+    "workPeriod": "Work Period",
+    "employees": "Employees",
+    "regularPay": "Regular Pay:",
+    "overtimePay": "Overtime Pay:",
+    "vacationAccrued": "Vacation Accrued:",
+    "department": "Department",
+    "hoursBreakdown": "Hours Breakdown",
+    "searchPlaceholder": "Search by employee name or department...",
+    "noData": "No Payroll Data",
+    "payBreakdown": "Pay Breakdown",
+    "regularPayLabel": "Regular Pay",
+    "overtimePayLabel": "Overtime Pay",
+    "grossPayLabel": "Gross Pay",
+    "netPayLabel": "Net Pay",
+    "vacationAccrual": "Vacation Accrual (4%)",
+    "vacationHoursAccrued": "Vacation Hours Accrued",
+    "vacationPayValue": "Vacation Pay Value"
   },
   "timeTracking": {
     "title": "Time Tracking",
@@ -174,23 +331,143 @@
     "adjustSearchTerms": "Try adjusting your search terms or clear the search to see all employees.",
     "noDataForDate": "No Data for This Date",
     "selectAnotherDate": "Select another date or upload timecards",
-    "loadingTimecards": "Loading timecards..."
+    "loadingTimecards": "Loading timecards...",
+    "ofEmployees": "of {{total}} employees",
+    "entries": "entries",
+    "searchByName": "Search by name or email...",
+    "period": "Period",
+    "selectPeriod": "Select period...",
+    "timecards": "timecards",
+    "searchEmployee": "Search Employee",
+    "loading": "Loading...",
+    "noTimecardsFound": "No Timecards Found",
+    "selectDifferentPeriod": "Select a different pay period or upload timecard data",
+    "employee": "Employee",
+    "email": "Email",
+    "status": "Status",
+    "approved": "Approved",
+    "submitted": "Submitted",
+    "rejected": "Rejected",
+    "draft": "Draft",
+    "actions": "Actions",
+    "viewDetails": "View Details →",
+    "backToAllTimecards": "Back to All Timecards",
+    "totalHoursLabel": "Total Hours",
+    "overtimeLabel": "OT",
+    "dailyTimeEntries": "Daily Time Entries",
+    "date": "Date",
+    "workTime": "Work Time",
+    "notesLabel": "Notes",
+    "dailyTotal": "Daily Total:",
+    "uploadModal": {
+      "title": "Upload Timecard Excel",
+      "fileLabel": "Excel File",
+      "periodStartOptional": "Period Start (Optional)",
+      "periodEndOptional": "Period End (Optional)",
+      "processing": "Uploading and processing file...",
+      "expectedFormat": "Expected Format:",
+      "formatInfo1": "Excel file with timecard data",
+      "formatInfo2": "Each employee section includes: Period, Employee name, Date, IN, OUT, Work Time, Daily Total, Note",
+      "formatInfo3": "Multiple clock-in/out pairs per day supported",
+      "formatInfo4": "System will automatically match employees by name",
+      "cancel": "Cancel",
+      "upload": "Upload",
+      "processing2": "Processing...",
+      "selectFile": "Please select an Excel file",
+      "selected": "Selected:"
+    },
+    "dayViewTable": {
+      "clockInHeader": "Clock In",
+      "clockOutHeader": "Clock Out",
+      "hoursHeader": "Hours",
+      "notesHeader": "Notes",
+      "actionsHeader": "Actions",
+      "save": "Save",
+      "saving": "Saving...",
+      "cancel": "Cancel",
+      "edit": "Edit",
+      "overtime": "OVERTIME",
+      "addNotes": "Add notes..."
+    },
+    "totalEmployees": "Total Employees",
+    "overtimeHours": "Overtime Hours",
+    "missingPunches": "Missing Punches",
+    "employeeBreakdown": "Employee Breakdown",
+    "failedToSave": "Failed to save changes",
+    "unknownError": "Unknown error",
+    "overtime": "Overtime",
+    "missing": "Missing",
+    "noTimecardsFound": "No Timecards Found",
+    "employee": "Employee",
+    "email": "Email",
+    "status": "Status",
+    "actions": "Actions",
+    "date": "Date",
+    "notesLabel": "Notes"
   },
   "compliance": {
-    "title": "Compliance",
+    "title": "Compliance Management",
+    "description": "Monitor and manage compliance alerts and requirements",
     "alerts": "Alerts",
     "documents": "Documents",
     "certifications": "Certifications",
     "dueDate": "Due Date",
-    "status": "Status"
+    "status": "Status",
+    "activeAlerts": "Active Compliance Alerts",
+    "totalAlerts": "Total Alerts",
+    "expiringSoon": "Expiring Soon",
+    "contractCompliance": "Contract Compliance",
+    "trainingCompliance": "Training Compliance",
+    "alertsByType": "Alerts by Type",
+    "allClear": "All Clear!"
   },
   "benefits": {
-    "title": "Benefits",
+    "title": "Benefits Administration",
     "healthInsurance": "Health Insurance",
     "retirement": "Retirement",
     "paidTimeOff": "Paid Time Off",
-    "enrollment": "Enrollment",
-    "myBenefits": "My Benefits"
+    "enrollment": "Benefits Enrollment",
+    "myBenefits": "My Benefits",
+    "insurancePlans": "Insurance Plans",
+    "retirementPlans": "Retirement Plans",
+    "analytics": "Benefits Analytics",
+    "effectiveDate": "Effective Date",
+    "enrollmentDate": "Enrollment Date:",
+    "coverageLevel": "Coverage Level:",
+    "dependents": "Dependents:",
+    "contribution": "Contribution:",
+    "monthlyPremium": "Monthly Premium",
+    "deductible": "Deductible:",
+    "copay": "Copay:",
+    "coinsurance": "Coinsurance:",
+    "coverageDetails": "Coverage Details",
+    "currentBalance": "Current Balance",
+    "employerMatch": "Employer Match:",
+    "vestingSchedule": "Vesting Schedule:",
+    "investmentOptions": "Investment Options:",
+    "annualContributionLimit": "Annual Contribution Limit:",
+    "enrollmentRate": "Enrollment Rate",
+    "totalCost": "Total Benefits Cost",
+    "employerContribution": "Employer Contribution",
+    "employeeContribution": "Employee Contribution",
+    "planName": "Plan Name",
+    "planLevel": "Plan Level",
+    "coverageDetailsPlaceholder": "Describe the coverage details...",
+    "enrollEmployee": "Enroll Employee in Benefits",
+    "selectEmployee": "Select Employee",
+    "benefitPlan": "Benefit Plan",
+    "selectBenefit": "Select Benefit",
+    "editEnrollment": "Edit Benefits Enrollment",
+    "employeeContributionPercent": "Employee Contribution (%)",
+    "enrollmentNotesPlaceholder": "Additional notes about this enrollment...",
+    "editPlan": "Edit Insurance Plan",
+    "planNameRequired": "Plan Name *",
+    "planType": "Plan Type",
+    "lifeInsurance": "Life Insurance",
+    "employeeCost": "Employee Cost (CAD)",
+    "employerCost": "Employer Cost (CAD)",
+    "planCoveragePlaceholder": "Describe what this plan covers...",
+    "confirmTerminate": "Are you sure you want to terminate this benefits enrollment?"
   },
   "bonuses": {
     "title": "Bonuses & Commissions",
@@ -229,7 +506,78 @@
     "revokeAll": "Revoke All",
     "revoke": "Revoke",
     "noTrustedDevices": "No trusted devices yet",
-    "trustDeviceNote": "When you check \"Trust this device for 7 days\" during MFA login, it will appear here"
+    "trustDeviceNote": "When you check \"Trust this device for 7 days\" during MFA login, it will appear here",
+    "notificationsEnabled": "Notifications Enabled",
+    "enableNotifications": "Enable notifications",
+    "defaultLanguage": "Default language",
+    "defaultTheme": "Default theme (dark/light)",
+    "notificationSettings": "Notification Settings",
+    "enableEmailNotifications": "Enable email notifications",
+    "enablePushNotifications": "Enable push notifications",
+    "securitySettings": "Security Settings",
+    "maintenanceAndBackup": "Maintenance & Backup",
+    "autoBackup": "Auto Backup",
+    "enableAutomaticBackups": "Enable automatic backups",
+    "backupFrequencyLabel": "Backup frequency",
+    "daily": "Daily",
+    "weekly": "Weekly",
+    "monthly": "Monthly",
+    "logRetention": "Log Retention Days",
+    "logRetentionPeriod": "Log retention period in days",
+    "userPreferences": "User Preferences",
+    "saving": "Saving...",
+    "enableMFA": "Enable MFA",
+    "cancel": "Cancel",
+    "mfaSetup": {
+      "title": "Enable Two-Factor Authentication",
+      "step1": "Step 1: Scan QR Code",
+      "step1Description": "Open your authenticator app (Google Authenticator, Authy, 1Password, etc.) and scan this QR code:",
+      "orManualEntry": "Or enter this secret key manually:",
+      "step2": "Step 2: Enter Verification Code",
+      "step2Description": "Enter the 6-digit code from your authenticator app:",
+      "verificationCode": "000000",
+      "saveBackupCodes": "⚠️ Save These Backup Codes",
+      "backupCodesDescription": "Store these codes in a safe place. You can use them to access your account if you lose your authenticator:",
+      "verifying": "Verifying...",
+      "enableMFA": "Enable MFA"
+    },
+    "passwordChange": {
+      "title": "🔐 Change Password",
+      "currentPassword": "Current Password",
+      "newPassword": "New Password",
+      "confirmPassword": "Confirm New Password",
+      "enterCurrentPassword": "Enter your current password",
+      "enterNewPassword": "Enter your new password (min 8 characters)",
+      "reenterNewPassword": "Re-enter your new password",
+      "minLengthNote": "Must be at least 8 characters. Cannot reuse your last 5 passwords.",
+      "updatePassword": "Update your password to keep your account secure",
+      "expiryNote": "Your password expires every 90 days. Choose a strong password you haven't used before.",
+      "changingPassword": "Changing Password...",
+      "passwordChangedSuccess": "✅ Password changed successfully!"
+    },
+    "trustedDevicesInfo": {
+      "title": "📱 Trusted Devices",
+      "description": "Manage devices that can bypass MFA for 7 days",
+      "loading": "Loading devices...",
+      "browser": "Browser:",
+      "lastUsed": "Last used:",
+      "expiresIn": "Expires in:",
+      "ip": "IP:",
+      "unknown": "Unknown",
+      "never": "Never"
+    },
+    "confirmations": {
+      "disableMFAWarning": "Are you sure you want to disable Two-Factor Authentication? This will make your account less secure.",
+      "revokeDeviceWarning": "Are you sure you want to revoke this trusted device? You will need to verify MFA again next time you log in from this device.",
+      "revokeAllDevicesWarning": "⚠️ Are you sure you want to revoke ALL trusted devices? You will need to verify MFA on all your devices next time you log in."
+    },
+    "noOptionsAvailable": "No options available",
+    "noOptionsWarning": "⚠️ This setting has no available options",
+    "noSettingsAvailable": "No settings available",
+    "settingsWillAppearHere": "Settings will appear here when available",
+    "noSystemSettings": "No system settings available",
+    "failedToRevokeDevice": "Failed to revoke device",
+    "failedToRevokeDevices": "Failed to revoke devices"
   },
   "login": {
     "title": "C&C HR",
@@ -284,6 +632,9 @@
     "all": "All",
     "none": "None",
     "total": "Total",
-    "subtotal": "Subtotal"
+    "subtotal": "Subtotal",
+    "on": "ON",
+    "off": "OFF",
+    "unknownError": "Unknown error"
   }
 }
