--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -32,8 +32,10 @@
     "pendingLeave": "Solicitudes de Ausencia Pendientes",
     "recentActivity": "Actividad Reciente",
     "noActivity": "Sin actividad reciente",
+    "avgHoursWeek": "Prom. Horas/Semana",
     "loadingInsights": "Cargando información de RRHH...",
     "happeningInOrg": "Esto es lo que está pasando en su organización",
+    "workforceSnapshot": "Aquí está la instantánea de su fuerza laboral para hoy.",
     "timeRange": "Rango de Tiempo",
     "thisWeek": "Esta Semana",
     "thisMonth": "Este Mes",
@@ -70,7 +72,8 @@
     "uploadTimecards": "Subir Tarjetas de Tiempo",
     "uploadBonuses": "Subir Bonificaciones",
     "leaveRequests": "Solicitudes de Ausencia",
-    "payroll": "Nómina"
+    "payroll": "Nómina",
+    "unknown": "Fecha desconocida"
   },
   "employees": {
     "title": "Empleados",
@@ -137,10 +140,145 @@
     "leaveCalendar": "Calendario de Ausencias",
     "leaveRequests": "Solicitudes de Ausencia",
     "leaveBalances": "Saldos de Ausencias",
-    "analytics": "Analíticas"
+    "analytics": "Analíticas",
+    "recordLeaveEntry": "Registrar Entrada de Ausencia",
+    "hrRecordsDescription": "RRHH registra ausencias de empleados comunicadas por correo electrónico, teléfono o en persona",
+    "employee": "Empleado",
+    "required": "*",
+    "selectLeaveType": "Seleccionar tipo de ausencia...",
+    "availableDays": "Días Disponibles:",
+    "daysLabel": "días",
+    "requestMethod": "Método de Solicitud",
+    "howWasRequested": "¿Cómo se solicitó?",
+    "email": "📧 Correo Electrónico",
+    "phone": "📞 Teléfono",
+    "inPerson": "🤝 En Persona",
+    "slack": "💬 Slack",
+    "written": "📝 Escrito",
+    "other": "❓ Otro",
+    "pendingReview": "⏳ Revisión Pendiente",
+    "approvedStatus": "✅ Aprobado",
+    "rejectedStatus": "❌ Rechazado",
+    "cancelled": "🚫 Cancelado",
+    "reasonLabel": "Motivo",
+    "reasonPlaceholder": "Opcional: ¿Por qué el empleado se toma ausencia?",
+    "hrNotes": "Notas de RRHH (Internas)",
+    "hrNotesPlaceholder": "Opcional: Notas internas para registros de RRHH...",
+    "saveAs": "Guardar como",
+    "saveAndApprove": "Guardar y Aprobar",
+    "pendingRequests": "Solicitudes Pendientes",
+    "noPendingRequests": "No se encontraron solicitudes de ausencia pendientes",
+    "allRequestsHistory": "Historial de Todas las Solicitudes",
+    "noRequestsFound": "No se encontraron solicitudes de ausencia",
+    "showing": "Mostrando",
+    "of": "de",
+    "requests": "solicitudes",
+    "page": "Página",
+    "previous": "Anterior",
+    "next": "Siguiente",
+    "totalDays": "Total de Días:",
+    "typeToSearch": "Escriba para buscar empleado...",
+    "noDept": "Sin Depto",
+    "balances": {
+      "totalAvailable": "Total Disponible",
+      "daysRemaining": "días restantes",
+      "thisYearUsed": "Usado Este Año",
+      "daysTaken": "días tomados",
+      "accrualRate": "Tasa de Acumulación",
+      "daysPerMonth": "días por mes",
+      "expiringSoon": "Venciendo Pronto",
+      "daysInThirtyDays": "días en 30 días",
+      "leaveTypeBreakdown": "Desglose por Tipo de Ausencia",
+      "available": "Disponible",
+      "used": "Usado",
+      "noLeaveDataAvailable": "No Hay Datos de Ausencia Disponibles",
+      "leaveBalancesWillAppear": "Los saldos de ausencias aparecerán aquí una vez que los empleados comiencen a usar el sistema.",
+      "vacation": "Vacaciones",
+      "vacationDays": "20 días/año",
+      "sickLeave": "Licencia por Enfermedad",
+      "sickLeaveDays": "10 días/año",
+      "personal": "Personal",
+      "personalDays": "5 días/año",
+      "accrualRateLabel": "días/mes • Vence",
+      "expiresNever": "Nunca",
+      "availableLabel": "disponible",
+      "usedLabel": "Usado:",
+      "availableLabel2": "Disponible:",
+      "percentUsed": "% usado",
+      "percentAvailable": "% disponible"
+    },
+    "hrManagement": {
+      "title": "Acciones de Gestión de RRHH",
+      "reviewRequests": "Revisar Solicitudes",
+      "reviewRequestsDesc": "Aprobar o rechazar solicitudes de ausencia",
+      "viewAnalytics": "Ver Analíticas",
+      "viewAnalyticsDesc": "Verificar tendencias e informes de ausencias",
+      "managePolicies": "Gestionar Políticas",
+      "managePoliciesDesc": "Configurar políticas y reglas de ausencias"
+    },
+    "calendar": {
+      "title": "Calendario de Ausencias",
+      "sun": "Dom",
+      "mon": "Lun",
+      "tue": "Mar",
+      "wed": "Mié",
+      "thu": "Jue",
+      "fri": "Vie",
+      "sat": "Sáb",
+      "selectDate": "Seleccionar una fecha",
+      "clickToSee": "Haga clic en un día del calendario para ver quién está de ausencia",
+      "noOneOnLeave": "Nadie está de ausencia este día",
+      "more": "más",
+      "legend": {
+        "vacation": "Vacaciones",
+        "sickLeave": "Licencia por Enfermedad",
+        "personal": "Personal",
+        "parental": "Parental",
+        "other": "Otro"
+      }
+    },
+    "analyticsTab": {
+      "totalRequests": "Solicitudes Totales",
+      "pendingCount": "Pendientes",
+      "approvedCount": "Aprobadas",
+      "upcomingCount": "Próximas"
+    },
+    "policyManagement": {
+      "title": "Gestión de Políticas de Ausencias",
+      "policyOverview": "Resumen de Políticas",
+      "vacationPolicy": "Política de Vacaciones",
+      "sickLeavePolicy": "Política de Licencia por Enfermedad",
+      "personalLeavePolicy": "Licencia Personal",
+      "annualAllocation": "Asignación Anual:",
+      "accrualRate": "Tasa de Acumulación:",
+      "carryOver": "Transferencia:",
+      "daysMax": "días máx",
+      "daysPerMonth": "días/mes",
+      "unlimited": "Ilimitado",
+      "noCarryOver": "Sin transferencia",
+      "policyConfiguration": "Configuración de Políticas",
+      "accrualFrequency": "Frecuencia de Acumulación",
+      "monthly": "Mensual",
+      "biweekly": "Quincenal",
+      "quarterly": "Trimestral",
+      "fiscalYearStart": "Inicio del Año Fiscal",
+      "january1": "1 de Enero",
+      "april1": "1 de Abril",
+      "july1": "1 de Julio",
+      "october1": "1 de Octubre",
+      "minimumNoticePeriod": "Período Mínimo de Aviso",
+      "24hours": "24 horas",
+      "48hours": "48 horas",
+      "1week": "1 semana",
+      "2weeks": "2 semanas",
+      "maximumConsecutiveDays": "Días Consecutivos Máximos",
+      "saveChanges": "Guardar Cambios"
+    }
   },
   "payroll": {
-    "title": "Nómina",
+    "title": "Gestión de Nómina",
+    "description": "Nómina de empleados por período de pago",
+    "loading": "Cargando datos de nómina...",
     "overview": "Resumen",
     "payPeriod": "Período de Pago",
     "payDate": "Fecha de Pago",
@@ -151,9 +289,30 @@
     "hours": "Horas",
     "regularHours": "Horas Regulares",
     "overtimeHours": "Horas Extra",
+    "totalHours": "Horas Totales",
     "hourlyRate": "Tarifa por Hora",
     "processPayroll": "Procesar Nómina",
-    "viewDetails": "Ver Detalles"
+    "viewDetails": "Ver Detalles",
+    "workPeriod": "Período de Trabajo",
+    "employees": "Empleados",
+    "regularPay": "Pago Regular:",
+    "overtimePay": "Pago Horas Extra:",
+    "vacationAccrued": "Vacaciones Acumuladas:",
+    "department": "Departamento",
+    "hoursBreakdown": "Desglose de Horas",
+    "searchPlaceholder": "Buscar por nombre de empleado o departamento...",
+    "noData": "Sin Datos de Nómina",
+    "payDate": "Fecha de Pago",
+    "netPay": "Pago Neto",
+    "payBreakdown": "Desglose de Pago",
+    "regularPayLabel": "Pago Regular",
+    "overtimePayLabel": "Pago Horas Extra",
+    "grossPayLabel": "Pago Bruto",
+    "netPayLabel": "Pago Neto",
+    "deductions": "Deducciones",
+    "vacationAccrual": "Acumulación de Vacaciones (4%)",
+    "vacationHoursAccrued": "Horas de Vacaciones Acumuladas",
+    "vacationPayValue": "Valor del Pago de Vacaciones"
   },
   "timeTracking": {
     "title": "Control de Tiempo",
@@ -174,15 +333,88 @@
     "adjustSearchTerms": "Intente ajustar sus términos de búsqueda o borre la búsqueda para ver todos los empleados.",
     "noDataForDate": "Sin Datos para Esta Fecha",
     "selectAnotherDate": "Seleccione otra fecha o suba tarjetas de tiempo",
-    "loadingTimecards": "Cargando tarjetas de tiempo..."
+    "loadingTimecards": "Cargando tarjetas de tiempo...",
+    "ofEmployees": "de {{total}} empleados",
+    "entries": "entradas",
+    "searchByName": "Buscar por nombre o correo electrónico...",
+    "period": "Período",
+    "selectPeriod": "Seleccionar período...",
+    "timecards": "tarjetas de tiempo",
+    "searchEmployee": "Buscar Empleado",
+    "loading": "Cargando...",
+    "noTimecardsFound": "No se Encontraron Tarjetas de Tiempo",
+    "selectDifferentPeriod": "Seleccione un período de pago diferente o suba datos de tarjetas de tiempo",
+    "employee": "Empleado",
+    "email": "Correo Electrónico",
+    "status": "Estado",
+    "approved": "Aprobado",
+    "submitted": "Enviado",
+    "rejected": "Rechazado",
+    "draft": "Borrador",
+    "actions": "Acciones",
+    "viewDetails": "Ver Detalles →",
+    "backToAllTimecards": "Volver a Todas las Tarjetas de Tiempo",
+    "totalHoursLabel": "Total de Horas",
+    "overtimeLabel": "HE",
+    "dailyTimeEntries": "Entradas de Tiempo Diarias",
+    "date": "Fecha",
+    "workTime": "Tiempo de Trabajo",
+    "notesLabel": "Notas",
+    "dailyTotal": "Total Diario:",
+    "uploadModal": {
+      "title": "Subir Excel de Tarjetas de Tiempo",
+      "fileLabel": "Archivo Excel",
+      "periodStartOptional": "Inicio del Período (Opcional)",
+      "periodEndOptional": "Fin del Período (Opcional)",
+      "processing": "Subiendo y procesando archivo...",
+      "expectedFormat": "Formato Esperado:",
+      "formatInfo1": "Archivo Excel con datos de tarjetas de tiempo",
+      "formatInfo2": "Cada sección de empleado incluye: Período, Nombre del empleado, Fecha, ENTRADA, SALIDA, Tiempo de Trabajo, Total Diario, Nota",
+      "formatInfo3": "Se admiten múltiples pares de entrada/salida por día",
+      "formatInfo4": "El sistema emparejará automáticamente a los empleados por nombre",
+      "cancel": "Cancelar",
+      "upload": "Subir",
+      "processing2": "Procesando...",
+      "selectFile": "Por favor seleccione un archivo Excel",
+      "selected": "Seleccionado:"
+    },
+    "dayViewTable": {
+      "clockInHeader": "Entrada",
+      "clockOutHeader": "Salida",
+      "hoursHeader": "Horas",
+      "notesHeader": "Notas",
+      "actionsHeader": "Acciones",
+      "save": "Guardar",
+      "saving": "Guardando...",
+      "cancel": "Cancelar",
+      "edit": "Editar",
+      "overtime": "HORAS EXTRA",
+      "addNotes": "Agregar notas..."
+    },
+    "totalEmployees": "Total de Empleados",
+    "overtimeHours": "Horas Extra",
+    "missingPunches": "Registros Faltantes",
+    "employeeBreakdown": "Desglose por Empleado",
+    "failedToSave": "Error al guardar cambios",
+    "unknownError": "Error desconocido",
+    "overtime": "Horas Extra",
+    "missing": "Faltante"
   },
   "compliance": {
-    "title": "Cumplimiento",
+    "title": "Gestión de Cumplimiento",
+    "description": "Monitorear y gestionar alertas y requisitos de cumplimiento",
     "alerts": "Alertas",
     "documents": "Documentos",
     "certifications": "Certificaciones",
     "dueDate": "Fecha de Vencimiento",
-    "status": "Estado"
+    "status": "Estado",
+    "activeAlerts": "Alertas de Cumplimiento Activas",
+    "totalAlerts": "Total de Alertas",
+    "expiringSoon": "Próximas a Vencer",
+    "contractCompliance": "Cumplimiento de Contratos",
+    "trainingCompliance": "Cumplimiento de Capacitación",
+    "alertsByType": "Alertas por Tipo",
+    "allClear": "¡Todo Despejado!"
   },
   "benefits": {
     "title": "Beneficios",
@@ -229,7 +461,76 @@
     "revokeAll": "Revocar Todos",
     "revoke": "Revocar",
     "noTrustedDevices": "Aún no hay dispositivos de confianza",
-    "trustDeviceNote": "Cuando marca \"Confiar en este dispositivo por 7 días\" durante el inicio de sesión con MFA, aparecerá aquí"
+    "trustDeviceNote": "Cuando marca \"Confiar en este dispositivo por 7 días\" durante el inicio de sesión con MFA, aparecerá aquí",
+    "notificationsEnabled": "Notificaciones Habilitadas",
+    "enableNotifications": "Habilitar notificaciones",
+    "defaultLanguage": "Idioma predeterminado",
+    "defaultTheme": "Tema predeterminado (oscuro/claro)",
+    "notificationSettings": "Configuración de Notificaciones",
+    "enableEmailNotifications": "Habilitar notificaciones por correo electrónico",
+    "enablePushNotifications": "Habilitar notificaciones push",
+    "securitySettings": "Configuración de Seguridad",
+    "maintenanceAndBackup": "Mantenimiento y Copia de Seguridad",
+    "autoBackup": "Copia de Seguridad Automática",
+    "enableAutomaticBackups": "Habilitar copias de seguridad automáticas",
+    "backupFrequencyLabel": "Frecuencia de copia de seguridad",
+    "daily": "Diaria",
+    "weekly": "Semanal",
+    "monthly": "Mensual",
+    "logRetention": "Días de Retención de Registros",
+    "logRetentionPeriod": "Período de retención de registros en días",
+    "userPreferences": "Preferencias de Usuario",
+    "saving": "Guardando...",
+    "enableMFA": "Habilitar MFA",
+    "cancel": "Cancelar",
+    "mfaSetup": {
+      "title": "Habilitar Autenticación de Dos Factores",
+      "step1": "Paso 1: Escanear Código QR",
+      "step1Description": "Abra su aplicación de autenticación (Google Authenticator, Authy, 1Password, etc.) y escanee este código QR:",
+      "orManualEntry": "O ingrese esta clave secreta manualmente:",
+      "step2": "Paso 2: Ingresar Código de Verificación",
+      "step2Description": "Ingrese el código de 6 dígitos de su aplicación de autenticación:",
+      "verificationCode": "000000",
+      "saveBackupCodes": "⚠️ Guarde Estos Códigos de Respaldo",
+      "backupCodesDescription": "Almacene estos códigos en un lugar seguro. Puede usarlos para acceder a su cuenta si pierde su autenticador:",
+      "verifying": "Verificando...",
+      "enableMFA": "Habilitar MFA"
+    },
+    "passwordChange": {
+      "title": "🔐 Cambiar Contraseña",
+      "currentPassword": "Contraseña Actual",
+      "newPassword": "Nueva Contraseña",
+      "confirmPassword": "Confirmar Nueva Contraseña",
+      "enterCurrentPassword": "Ingrese su contraseña actual",
+      "enterNewPassword": "Ingrese su nueva contraseña (mín 8 caracteres)",
+      "reenterNewPassword": "Vuelva a ingresar su nueva contraseña",
+      "minLengthNote": "Debe tener al menos 8 caracteres. No puede reutilizar sus últimas 5 contraseñas.",
+      "updatePassword": "Actualice su contraseña para mantener su cuenta segura",
+      "expiryNote": "Su contraseña expira cada 90 días. Elija una contraseña fuerte que no haya usado antes.",
+      "changingPassword": "Cambiando Contraseña...",
+      "passwordChangedSuccess": "✅ Contraseña cambiada con éxito!"
+    },
+    "trustedDevicesInfo": {
+      "title": "📱 Dispositivos de Confianza",
+      "description": "Gestionar dispositivos que pueden omitir MFA durante 7 días",
+      "loading": "Cargando dispositivos...",
+      "browser": "Navegador:",
+      "lastUsed": "Último uso:",
+      "expiresIn": "Expira en:",
+      "ip": "IP:",
+      "unknown": "Desconocido",
+      "never": "Nunca"
+    },
+    "confirmations": {
+      "disableMFAWarning": "¿Está seguro de que desea deshabilitar la Autenticación de Dos Factores? Esto hará que su cuenta sea menos segura.",
+      "revokeDeviceWarning": "¿Está seguro de que desea revocar este dispositivo de confianza? Deberá verificar MFA nuevamente la próxima vez que inicie sesión desde este dispositivo.",
+      "revokeAllDevicesWarning": "⚠️ ¿Está seguro de que desea revocar TODOS los dispositivos de confianza? Deberá verificar MFA en todos sus dispositivos la próxima vez que inicie sesión."
+    },
+    "noOptionsAvailable": "No hay opciones disponibles",
+    "noOptionsWarning": "⚠️ Esta configuración no tiene opciones disponibles",
+    "noSettingsAvailable": "No hay configuración disponible",
+    "settingsWillAppearHere": "La configuración aparecerá aquí cuando esté disponible",
+    "noSystemSettings": "No hay configuración del sistema disponible"
   },
   "login": {
     "title": "C&C HR",
@@ -284,6 +585,9 @@
     "all": "Todos",
     "none": "Ninguno",
     "total": "Total",
-    "subtotal": "Subtotal"
+    "subtotal": "Subtotal",
+    "on": "ACTIVADO",
+    "off": "DESACTIVADO",
+    "unknownError": "Error desconocido"
   }
 }
