--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -32,8 +32,10 @@
     "pendingLeave": "Demandes de Congé en Attente",
     "recentActivity": "Activité Récente",
     "noActivity": "Aucune activité récente",
+    "avgHoursWeek": "Moy. Heures/Semaine",
     "loadingInsights": "Chargement de vos informations RH...",
     "happeningInOrg": "Voici ce qui se passe dans votre organisation",
+    "workforceSnapshot": "Voici l'instantané de votre effectif pour aujourd'hui.",
     "timeRange": "Plage de Temps",
     "thisWeek": "Cette Semaine",
     "thisMonth": "Ce Mois",
@@ -70,7 +72,8 @@
     "uploadTimecards": "Télécharger Feuilles de Temps",
     "uploadBonuses": "Télécharger Primes",
     "leaveRequests": "Demandes de Congé",
-    "payroll": "Paie"
+    "payroll": "Paie",
+    "unknown": "Date inconnue"
   },
   "employees": {
     "title": "Employés",
@@ -137,10 +140,145 @@
     "leaveCalendar": "Calendrier des Congés",
     "leaveRequests": "Demandes de Congé",
     "leaveBalances": "Soldes de Congés",
-    "analytics": "Analytiques"
+    "analytics": "Analytiques",
+    "recordLeaveEntry": "Enregistrer une Entrée de Congé",
+    "hrRecordsDescription": "Les RH enregistrent les congés des employés communiqués par courriel, téléphone ou en personne",
+    "employee": "Employé",
+    "required": "*",
+    "selectLeaveType": "Sélectionner le type de congé...",
+    "availableDays": "Jours Disponibles:",
+    "daysLabel": "jours",
+    "requestMethod": "Méthode de Demande",
+    "howWasRequested": "Comment a-t-il été demandé?",
+    "email": "📧 Courriel",
+    "phone": "📞 Téléphone",
+    "inPerson": "🤝 En Personne",
+    "slack": "💬 Slack",
+    "written": "📝 Écrit",
+    "other": "❓ Autre",
+    "pendingReview": "⏳ Révision en Attente",
+    "approvedStatus": "✅ Approuvé",
+    "rejectedStatus": "❌ Rejeté",
+    "cancelled": "🚫 Annulé",
+    "reasonLabel": "Motif",
+    "reasonPlaceholder": "Optionnel: Pourquoi l'employé prend-il un congé?",
+    "hrNotes": "Notes RH (Internes)",
+    "hrNotesPlaceholder": "Optionnel: Notes internes pour les dossiers RH...",
+    "saveAs": "Enregistrer comme",
+    "saveAndApprove": "Enregistrer et Approuver",
+    "pendingRequests": "Demandes en Attente",
+    "noPendingRequests": "Aucune demande de congé en attente trouvée",
+    "allRequestsHistory": "Historique de Toutes les Demandes",
+    "noRequestsFound": "Aucune demande de congé trouvée",
+    "showing": "Affichage",
+    "of": "de",
+    "requests": "demandes",
+    "page": "Page",
+    "previous": "Précédent",
+    "next": "Suivant",
+    "totalDays": "Total des Jours:",
+    "typeToSearch": "Tapez pour rechercher un employé...",
+    "noDept": "Aucun Dép",
+    "balances": {
+      "totalAvailable": "Total Disponible",
+      "daysRemaining": "jours restants",
+      "thisYearUsed": "Utilisé Cette Année",
+      "daysTaken": "jours pris",
+      "accrualRate": "Taux d'Accumulation",
+      "daysPerMonth": "jours par mois",
+      "expiringSoon": "Expire Bientôt",
+      "daysInThirtyDays": "jours dans 30 jours",
+      "leaveTypeBreakdown": "Répartition par Type de Congé",
+      "available": "Disponible",
+      "used": "Utilisé",
+      "noLeaveDataAvailable": "Aucune Donnée de Congé Disponible",
+      "leaveBalancesWillAppear": "Les soldes de congés apparaîtront ici une fois que les employés commenceront à utiliser le système.",
+      "vacation": "Vacances",
+      "vacationDays": "20 jours/an",
+      "sickLeave": "Congé Maladie",
+      "sickLeaveDays": "10 jours/an",
+      "personal": "Personnel",
+      "personalDays": "5 jours/an",
+      "accrualRateLabel": "jours/mois • Expire",
+      "expiresNever": "Jamais",
+      "availableLabel": "disponible",
+      "usedLabel": "Utilisé:",
+      "availableLabel2": "Disponible:",
+      "percentUsed": "% utilisé",
+      "percentAvailable": "% disponible"
+    },
+    "hrManagement": {
+      "title": "Actions de Gestion RH",
+      "reviewRequests": "Examiner les Demandes",
+      "reviewRequestsDesc": "Approuver ou rejeter les demandes de congé",
+      "viewAnalytics": "Voir les Analytiques",
+      "viewAnalyticsDesc": "Vérifier les tendances et les rapports sur les congés",
+      "managePolicies": "Gérer les Politiques",
+      "managePoliciesDesc": "Configurer les politiques et les règles de congés"
+    },
+    "calendar": {
+      "title": "Calendrier des Congés",
+      "sun": "Dim",
+      "mon": "Lun",
+      "tue": "Mar",
+      "wed": "Mer",
+      "thu": "Jeu",
+      "fri": "Ven",
+      "sat": "Sam",
+      "selectDate": "Sélectionner une date",
+      "clickToSee": "Cliquez sur un jour du calendrier pour voir qui est en congé",
+      "noOneOnLeave": "Personne n'est en congé ce jour",
+      "more": "plus",
+      "legend": {
+        "vacation": "Vacances",
+        "sickLeave": "Congé Maladie",
+        "personal": "Personnel",
+        "parental": "Parental",
+        "other": "Autre"
+      }
+    },
+    "analyticsTab": {
+      "totalRequests": "Demandes Totales",
+      "pendingCount": "En Attente",
+      "approvedCount": "Approuvées",
+      "upcomingCount": "À Venir"
+    },
+    "policyManagement": {
+      "title": "Gestion des Politiques de Congés",
+      "policyOverview": "Aperçu des Politiques",
+      "vacationPolicy": "Politique de Vacances",
+      "sickLeavePolicy": "Politique de Congé Maladie",
+      "personalLeavePolicy": "Congé Personnel",
+      "annualAllocation": "Attribution Annuelle:",
+      "accrualRate": "Taux d'Accumulation:",
+      "carryOver": "Report:",
+      "daysMax": "jours max",
+      "daysPerMonth": "jours/mois",
+      "unlimited": "Illimité",
+      "noCarryOver": "Aucun report",
+      "policyConfiguration": "Configuration des Politiques",
+      "accrualFrequency": "Fréquence d'Accumulation",
+      "monthly": "Mensuel",
+      "biweekly": "Bihebdomadaire",
+      "quarterly": "Trimestriel",
+      "fiscalYearStart": "Début de l'Année Fiscale",
+      "january1": "1er Janvier",
+      "april1": "1er Avril",
+      "july1": "1er Juillet",
+      "october1": "1er Octobre",
+      "minimumNoticePeriod": "Période de Préavis Minimum",
+      "24hours": "24 heures",
+      "48hours": "48 heures",
+      "1week": "1 semaine",
+      "2weeks": "2 semaines",
+      "maximumConsecutiveDays": "Jours Consécutifs Maximum",
+      "saveChanges": "Enregistrer les Modifications"
+    }
   },
   "payroll": {
-    "title": "Paie",
+    "title": "Gestion de la Paie",
+    "description": "Paie des employés par période de paie",
+    "loading": "Chargement des données de paie...",
     "overview": "Vue d'ensemble",
     "payPeriod": "Période de Paie",
     "payDate": "Date de Paie",
@@ -151,9 +289,30 @@
     "hours": "Heures",
     "regularHours": "Heures Régulières",
     "overtimeHours": "Heures Supplémentaires",
+    "totalHours": "Heures Totales",
     "hourlyRate": "Taux Horaire",
     "processPayroll": "Traiter la Paie",
-    "viewDetails": "Voir les Détails"
+    "viewDetails": "Voir les Détails",
+    "workPeriod": "Période de Travail",
+    "employees": "Employés",
+    "regularPay": "Paie Régulière:",
+    "overtimePay": "Paie Heures Supplémentaires:",
+    "vacationAccrued": "Vacances Accumulées:",
+    "department": "Département",
+    "hoursBreakdown": "Répartition des Heures",
+    "searchPlaceholder": "Rechercher par nom d'employé ou département...",
+    "noData": "Aucune Donnée de Paie",
+    "payDate": "Date de Paie",
+    "netPay": "Salaire Net",
+    "payBreakdown": "Détail de la Paie",
+    "regularPayLabel": "Paie Régulière",
+    "overtimePayLabel": "Paie Heures Supplémentaires",
+    "grossPayLabel": "Salaire Brut",
+    "netPayLabel": "Salaire Net",
+    "deductions": "Déductions",
+    "vacationAccrual": "Cumul de Vacances (4%)",
+    "vacationHoursAccrued": "Heures de Vacances Accumulées",
+    "vacationPayValue": "Valeur de la Paie de Vacances"
   },
   "timeTracking": {
     "title": "Suivi du Temps",
@@ -174,15 +333,88 @@
     "adjustSearchTerms": "Essayez d'ajuster vos termes de recherche ou effacez la recherche pour voir tous les employés.",
     "noDataForDate": "Aucune Donnée pour Cette Date",
     "selectAnotherDate": "Sélectionnez une autre date ou téléchargez des feuilles de temps",
-    "loadingTimecards": "Chargement des feuilles de temps..."
+    "loadingTimecards": "Chargement des feuilles de temps...",
+    "ofEmployees": "de {{total}} employés",
+    "entries": "entrées",
+    "searchByName": "Rechercher par nom ou courriel...",
+    "period": "Période",
+    "selectPeriod": "Sélectionner la période...",
+    "timecards": "feuilles de temps",
+    "searchEmployee": "Rechercher un Employé",
+    "loading": "Chargement...",
+    "noTimecardsFound": "Aucune Feuille de Temps Trouvée",
+    "selectDifferentPeriod": "Sélectionnez une période de paie différente ou téléchargez des données de feuilles de temps",
+    "employee": "Employé",
+    "email": "Courriel",
+    "status": "Statut",
+    "approved": "Approuvé",
+    "submitted": "Soumis",
+    "rejected": "Rejeté",
+    "draft": "Brouillon",
+    "actions": "Actions",
+    "viewDetails": "Voir les Détails →",
+    "backToAllTimecards": "Retour à Toutes les Feuilles de Temps",
+    "totalHoursLabel": "Total des Heures",
+    "overtimeLabel": "HS",
+    "dailyTimeEntries": "Entrées de Temps Quotidiennes",
+    "date": "Date",
+    "workTime": "Temps de Travail",
+    "notesLabel": "Notes",
+    "dailyTotal": "Total Quotidien:",
+    "uploadModal": {
+      "title": "Télécharger un Excel de Feuilles de Temps",
+      "fileLabel": "Fichier Excel",
+      "periodStartOptional": "Début de la Période (Optionnel)",
+      "periodEndOptional": "Fin de la Période (Optionnel)",
+      "processing": "Téléchargement et traitement du fichier...",
+      "expectedFormat": "Format Attendu:",
+      "formatInfo1": "Fichier Excel avec des données de feuilles de temps",
+      "formatInfo2": "Chaque section d'employé comprend: Période, Nom de l'employé, Date, ENTRÉE, SORTIE, Temps de Travail, Total Quotidien, Note",
+      "formatInfo3": "Plusieurs paires entrée/sortie par jour prises en charge",
+      "formatInfo4": "Le système associera automatiquement les employés par nom",
+      "cancel": "Annuler",
+      "upload": "Télécharger",
+      "processing2": "Traitement...",
+      "selectFile": "Veuillez sélectionner un fichier Excel",
+      "selected": "Sélectionné:"
+    },
+    "dayViewTable": {
+      "clockInHeader": "Entrée",
+      "clockOutHeader": "Sortie",
+      "hoursHeader": "Heures",
+      "notesHeader": "Notes",
+      "actionsHeader": "Actions",
+      "save": "Enregistrer",
+      "saving": "Enregistrement...",
+      "cancel": "Annuler",
+      "edit": "Modifier",
+      "overtime": "HEURES SUPP",
+      "addNotes": "Ajouter des notes..."
+    },
+    "totalEmployees": "Total des Employés",
+    "overtimeHours": "Heures Supplémentaires",
+    "missingPunches": "Pointages Manquants",
+    "employeeBreakdown": "Répartition par Employé",
+    "failedToSave": "Échec de l'enregistrement des modifications",
+    "unknownError": "Erreur inconnue",
+    "overtime": "Heures Supplémentaires",
+    "missing": "Manquant"
   },
   "compliance": {
-    "title": "Conformité",
+    "title": "Gestion de la Conformité",
+    "description": "Surveiller et gérer les alertes et exigences de conformité",
     "alerts": "Alertes",
     "documents": "Documents",
     "certifications": "Certifications",
     "dueDate": "Date d'Échéance",
-    "status": "Statut"
+    "status": "Statut",
+    "activeAlerts": "Alertes de Conformité Actives",
+    "totalAlerts": "Total des Alertes",
+    "expiringSoon": "Expire Bientôt",
+    "contractCompliance": "Conformité des Contrats",
+    "trainingCompliance": "Conformité de la Formation",
+    "alertsByType": "Alertes par Type",
+    "allClear": "Tout est en Ordre!"
   },
   "benefits": {
     "title": "Avantages Sociaux",
@@ -229,7 +461,76 @@
     "revokeAll": "Révoquer Tous",
     "revoke": "Révoquer",
     "noTrustedDevices": "Aucun appareil de confiance pour le moment",
-    "trustDeviceNote": "Lorsque vous cochez \"Faire confiance à cet appareil pendant 7 jours\" lors de la connexion MFA, il apparaîtra ici"
+    "trustDeviceNote": "Lorsque vous cochez \"Faire confiance à cet appareil pendant 7 jours\" lors de la connexion MFA, il apparaîtra ici",
+    "notificationsEnabled": "Notifications Activées",
+    "enableNotifications": "Activer les notifications",
+    "defaultLanguage": "Langue par défaut",
+    "defaultTheme": "Thème par défaut (sombre/clair)",
+    "notificationSettings": "Paramètres de Notification",
+    "enableEmailNotifications": "Activer les notifications par courriel",
+    "enablePushNotifications": "Activer les notifications push",
+    "securitySettings": "Paramètres de Sécurité",
+    "maintenanceAndBackup": "Maintenance et Sauvegarde",
+    "autoBackup": "Sauvegarde Automatique",
+    "enableAutomaticBackups": "Activer les sauvegardes automatiques",
+    "backupFrequencyLabel": "Fréquence de sauvegarde",
+    "daily": "Quotidienne",
+    "weekly": "Hebdomadaire",
+    "monthly": "Mensuelle",
+    "logRetention": "Jours de Rétention des Journaux",
+    "logRetentionPeriod": "Période de rétention des journaux en jours",
+    "userPreferences": "Préférences Utilisateur",
+    "saving": "Enregistrement...",
+    "enableMFA": "Activer MFA",
+    "cancel": "Annuler",
+    "mfaSetup": {
+      "title": "Activer l'Authentification à Deux Facteurs",
+      "step1": "Étape 1: Scanner le Code QR",
+      "step1Description": "Ouvrez votre application d'authentification (Google Authenticator, Authy, 1Password, etc.) et scannez ce code QR:",
+      "orManualEntry": "Ou entrez cette clé secrète manuellement:",
+      "step2": "Étape 2: Entrer le Code de Vérification",
+      "step2Description": "Entrez le code à 6 chiffres de votre application d'authentification:",
+      "verificationCode": "000000",
+      "saveBackupCodes": "⚠️ Enregistrez Ces Codes de Secours",
+      "backupCodesDescription": "Conservez ces codes dans un endroit sûr. Vous pouvez les utiliser pour accéder à votre compte si vous perdez votre authentificateur:",
+      "verifying": "Vérification...",
+      "enableMFA": "Activer MFA"
+    },
+    "passwordChange": {
+      "title": "🔐 Changer le Mot de Passe",
+      "currentPassword": "Mot de Passe Actuel",
+      "newPassword": "Nouveau Mot de Passe",
+      "confirmPassword": "Confirmer le Nouveau Mot de Passe",
+      "enterCurrentPassword": "Entrez votre mot de passe actuel",
+      "enterNewPassword": "Entrez votre nouveau mot de passe (min 8 caractères)",
+      "reenterNewPassword": "Saisissez à nouveau votre nouveau mot de passe",
+      "minLengthNote": "Doit contenir au moins 8 caractères. Impossible de réutiliser vos 5 derniers mots de passe.",
+      "updatePassword": "Mettez à jour votre mot de passe pour garder votre compte sécurisé",
+      "expiryNote": "Votre mot de passe expire tous les 90 jours. Choisissez un mot de passe fort que vous n'avez pas utilisé auparavant.",
+      "changingPassword": "Changement du Mot de Passe...",
+      "passwordChangedSuccess": "✅ Mot de passe changé avec succès!"
+    },
+    "trustedDevicesInfo": {
+      "title": "📱 Appareils de Confiance",
+      "description": "Gérer les appareils qui peuvent contourner MFA pendant 7 jours",
+      "loading": "Chargement des appareils...",
+      "browser": "Navigateur:",
+      "lastUsed": "Dernière utilisation:",
+      "expiresIn": "Expire dans:",
+      "ip": "IP:",
+      "unknown": "Inconnu",
+      "never": "Jamais"
+    },
+    "confirmations": {
+      "disableMFAWarning": "Êtes-vous sûr de vouloir désactiver l'Authentification à Deux Facteurs? Cela rendra votre compte moins sécurisé.",
+      "revokeDeviceWarning": "Êtes-vous sûr de vouloir révoquer cet appareil de confiance? Vous devrez vérifier MFA à nouveau la prochaine fois que vous vous connecterez depuis cet appareil.",
+      "revokeAllDevicesWarning": "⚠️ Êtes-vous sûr de vouloir révoquer TOUS les appareils de confiance? Vous devrez vérifier MFA sur tous vos appareils la prochaine fois que vous vous connecterez."
+    },
+    "noOptionsAvailable": "Aucune option disponible",
+    "noOptionsWarning": "⚠️ Ce paramètre n'a aucune option disponible",
+    "noSettingsAvailable": "Aucun paramètre disponible",
+    "settingsWillAppearHere": "Les paramètres apparaîtront ici lorsqu'ils seront disponibles",
+    "noSystemSettings": "Aucun paramètre système disponible"
   },
   "login": {
     "title": "C&C HR",
@@ -284,6 +585,9 @@
     "all": "Tous",
     "none": "Aucun",
     "total": "Total",
-    "subtotal": "Sous-total"
+    "subtotal": "Sous-total",
+    "on": "ACTIVÉ",
+    "off": "DÉSACTIVÉ",
+    "unknownError": "Erreur inconnue"
   }
 }
